--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
-    "@types/node": "^20.11.16",
-    "express": "^4.18.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.1.1"
+     "@types/node": "^20.11.16",
+     "express": "^4.18.2",
+     "mongodb": "^6.3.0",
+     "mongoose": "^8.1.1"
+  },
+  "scripts": {
+     "seed": "node utils/seed.js"
   }
-}
+ }
